# RP2040-Dictaphone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: button.c  button.h  hw_config.c  main.c  serial.c  serial.h  storage.c  storage.h
src/pio/: CMakeLists.txt  i2s_input.pio
